--- a/greeting-config/src/main/resources/bootstrap.yml
+++ b/greeting-config/src/main/resources/bootstrap.yml
@@ -1,3 +1,10 @@
 spring:
   application:
     name: greeting-config
+
+## Since there is no spring.cloud.config.uri defined in this file,
+## the default value of http://localhost:8888 is used
+#spring:
+#  cloud:
+#    config:
+#      uri: http://localhost:8888
